<resources>
    <string name="app_name">WidgetsApp</string>
    <string name="alpha">alpha</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="ok">OK</string>
    <string name="cheat_mode">Cheat mode</string>
    <string name="normal_mode">normal mode</string>
    <string name="display_time">Display Time</string>
    <string name="time_picker">Time Picker</string>
    <string name="check_box">Check Box</string>
    <string name="spinner">Spinner</string>
    <string name="radio_box">Radio Box</string>
    <string name="pick_time">Pick time</string>
    <string name="date_picker">Date Picker</string>
    <string name="select_date">Select Date</string>
    <string name="max">MAX</string>
    <string name="min">MIN</string>
    <string name="_25">+25</string>
    <string name="_25minus">-25</string>
    <string-array name="color">
        <item>green</item>
        <item>red</item>
        <item>black</item>
    </string-array>
</resources>